--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch"
+		"dev": "npx @tailwindcss/cli -i ./src/input.css -o ./files/style.css --watch"
 	},
 	"dependencies": {
 		"@tailwindcss/cli": "^4.1.11",
